# asteroid

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: compile.yml
inc/: Asteroids.hh  Bullet.hh  Game.hh  MovingObject.hh  Ship.hh  SpaceObject.hh  alphabet.hh  random.hh  renderer_wrapper.hh  rocket.hh  sdl_wrapper.hh  utilitaires.hh  window_wrapper.hh
src/: Asteroids.cc  Asteroids.hh  Bullet.cc  Cursor.cc  Cursor.hh  Game.cc  Game.hh  Ship.cc  Ship.hh  SpaceObject.cc  asteroid.cc  clang-format  main.cc  notes.md  renderer_wrapper.cc  renderer_wrapper.hh  sdl_wrapper.cc  sdl_wrapper.hh  utilitaires.cc  utilitaires.hh  window_wrapper.cc  window_wrapper.hh
